Added Google Fonts

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
   <meta name="author" content="Dineen Schmidt">
 
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,500|Rock+Salt">
 </head>
 
 <body>
-    <h1 id="madlib-title">Dineen Lauren</h1>
+    <h1 id="page-title">Dineen Lauren </h1>
 
 <div class="container">
-    <p>Website Under Construction</p>
+    <p class="page-header">Development Portfolio</p>
 </div>
     
 </body>
