Updated HTML file to include links to work

--- a/index.html
+++ b/index.html
@@ -4,20 +4,53 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Dineen: Development Portfolio</title>
+  <title>Dineen | Development Portfolio</title>
   <meta name="description" content="Dineen Development Portfolio">
   <meta name="author" content="Dineen Schmidt">
 
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,500|Rock+Salt">
+  
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 
 <body>
-    <h1 id="page-title">Dineen Lauren </h1>
+  <header>
+    <div class="header">
+      <div class="header-title">
+        <h1 class="page-title">Dineen Lauren</h1>
+        <p class="page-header">Development Portfolio</p>
+      </div>
+      <nav class="main-nav">
+        <div class="nav-wrapper">
+          <ul class="main-nav-links">
+            <li><a href="#mywork">My Work</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </header>
+  
+ 
 
+<div class="main">
 <div class="container">
-    <p class="page-header">Development Portfolio</p>
+    <p>Welcome to my (soon-to-be) development portfolio.</p>
 </div>
+
+<!-- MAIN -->
+
+   <div class="container"> 
+    <h2 id="mywork">My Work</h2>
+    <div class="portfolio-container">
+        <ul class="portfolio-section">
+            <li class="projects"><a target="_blank" href="http://dineenlauren.com/wats1010-embedded-media/index.html">Monkaa</a></li>
+            <li class="projects"><a target="_blank" href="http://dineenlauren.com/wats3010-intro-to-bootstrap-4/index.html">Business Website</a></li>
+            <li class="projects"><a target="_blank" href="http://dineenlauren.com/wats1010-product-page/">API Superstore</a></li>
+          </ul>
+    </div>
+    </div>
+    </div>
     
 </body>
 </html>
