--- a/index.html
+++ b/index.html
@@ -1,56 +1,205 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
 
-  <title>Dineen | Development Portfolio</title>
-  <meta name="description" content="Dineen Development Portfolio">
-  <meta name="author" content="Dineen Schmidt">
+  <head>
 
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,500|Rock+Salt">
-  
-  <link rel="icon" type="image/png" href="favicon.png">
-</head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="A Web Development Portfolio">
+    <meta name="author" content="Dineen Lauren">
 
-<body>
-  <header>
-    <div class="header">
-      <div class="header-title">
-        <h1 class="page-title">Dineen Lauren</h1>
-        <p class="page-header">Development Portfolio</p>
-      </div>
-      <nav class="main-nav">
-        <div class="nav-wrapper">
-          <ul class="main-nav-links">
-            <li><a href="#mywork">My Work</a></li>
+    <title>Dineen Lauren - Development Portfolio</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom fonts for this template -->
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/one-page-wonder.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this page -->
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link href="css/main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,500|Rock+Salt" rel="stylesheet">
+
+  </head>
+
+  <body>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="img/logo.png" width="50" height="50" alt="logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">My Work</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
           </ul>
         </div>
-      </nav>
-    </div>
-  </header>
-  
- 
+      </div>
+    </nav>
 
-<div class="main">
-<div class="container">
-    <p>Welcome to my (soon-to-be) development portfolio.</p>
-</div>
 
-<!-- MAIN -->
 
-   <div class="container"> 
-    <h2 id="mywork">My Work</h2>
-    <div class="portfolio-container">
-        <ul class="portfolio-section">
-            <li class="projects"><a target="_blank" href="http://dineenlauren.com/wats1010-embedded-media/index.html">Monkaa</a></li>
-            <li class="projects"><a target="_blank" href="http://dineenlauren.com/wats3010-intro-to-bootstrap-4/index.html">Business Website</a></li>
-            <li class="projects"><a target="_blank" href="http://dineenlauren.com/wats1010-product-page/">API Superstore</a></li>
-          </ul>
+    <header class="masthead text-center text-white">
+      <div class="masthead-content">
+        <div class="container">
+          <h1 class="masthead-heading mb-0 page-heading">Dineen Lauren</h1>
+          <h2 class="masthead-subheading mb-0 page-phrase">Web Development Portfolio</h2>
+          <a href="#about-me" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>
+        </div>
+      </div>
+      <div class="bg-circle-1 bg-circle"></div>
+      <div class="bg-circle-2 bg-circle"></div>
+      <div class="bg-circle-3 bg-circle"></div>
+      <div class="bg-circle-4 bg-circle"></div>
+    </header>
+
+
+ <!-- TESTING -->
+
+ <div id="ss-container" class="ss-container"></div>
+  <div class="main" id="mainContent">
+    <section>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6 order-lg-2">
+            <div class="p-5">
+              <img class="img-fluid rounded-circle" id="firstPhoto" src="http://placekitten.com/g/300/300" alt="">
+            </div>
+          </div>
+          <div class="col-lg-6 order-lg-1">
+            <div class="p-5">
+              <h2 class="display-4" id="about-me">Who</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6">
+            <div class="p-5">
+              <img class="img-fluid rounded-circle" id="secondPhoto" src="http://placekitten.com/g/600/600" alt="">
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="p-5">
+              <h2 class="display-4">What</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6 order-lg-2">
+            <div class="p-5">
+              <img class="img-fluid rounded-circle" src="http://placekitten.com/g/400/400" alt="">
+            </div>
+          </div>
+          <div class="col-lg-6 order-lg-1">
+            <div class="p-5">
+              <h2 class="display-4">When</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+
+  <div class="container">
+
+    <h1 class="my-4 text-center text-lg-left">Where</h1>
+
+    <div class="row text-center text-lg-left">
+
+      <div class="col-lg-4 col-md-4 col-xs-6 p-1">
+        <a href="#" class="d-block mb-1 h-100">
+          <img class="img-fluid img-thumbnail p-0" src="http://placehold.it/400x300" alt="">
+        </a>
+      </div>
+      <div class="col-lg-4 col-md-4 col-xs-6 p-1">
+        <a href="#" class="d-block mb-1 h-100 p-0">
+          <img class="img-fluid img-thumbnail p-0" src="http://placehold.it/400x300" alt="">
+        </a>
+      </div>
+      <div class="col-lg-4 col-md-4 col-xs-6 p-1">
+        <a href="#" class="d-block mb-1 h-100">
+          <img class="img-fluid img-thumbnail p-0" src="http://placehold.it/400x300" alt="">
+        </a>
+      </div>
+      <div class="col-lg-4 col-md-4 col-xs-6 p-1">
+        <a href="#" class="d-block mb-1 h-100">
+          <img class="img-fluid img-thumbnail p-0" src="http://placehold.it/400x300" alt="">
+        </a>
+      </div>
+      <div class="col-lg-4 col-md-4 col-xs-6 p-1">
+        <a href="#" class="d-block mb-1 h-100">
+          <img class="img-fluid img-thumbnail p-0" src="http://placehold.it/400x300" alt="">
+        </a>
+      </div>
+      <div class="col-lg-4 col-md-4 col-xs-6 p-1">
+        <a href="#" class="d-block mb-1 h-100">
+          <img class="img-fluid img-thumbnail p-0" src="http://placehold.it/400x300" alt="">
+        </a>
+      </div>
+      <div class="col-lg-4 col-md-4 col-xs-6 p-1">
+        <a href="#" class="d-block mb-1 h-100">
+          <img class="img-fluid img-thumbnail p-0" src="http://placehold.it/400x300" alt="">
+        </a>
+      </div>
+      <div class="col-lg-4 col-md-4 col-xs-6 p-1">
+        <a href="#" class="d-block mb-1 h-100">
+          <img class="img-fluid img-thumbnail p-0" src="http://placehold.it/400x300" alt="">
+        </a>
+      </div>
+      <div class="col-lg-4 col-md-4 col-xs-6 p-1">
+        <a href="#" class="d-block mb-1 h-100">
+          <img class="img-fluid img-thumbnail p-0" src="http://placehold.it/400x300" alt="">
+        </a>
+      </div>
+
     </div>
-    </div>
-    </div>
-    
-</body>
+
+  </div>
+  <!-- /.container -->
+
+    <!-- Footer -->
+    <footer class="py-5 bg-black">
+      <div class="container">
+        <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2018</p>
+      </div>
+      <!-- /.container -->
+    </footer>
+
+    <script src="main.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  </body>
+
 </html>
