--- a/index.jQuery.html
+++ b/index.jQuery.html
@@ -28,17 +28,12 @@
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="#">About Me</a>
+						<a class="nav-link" href="#who">About Me</a>
 					</li>
 
 
 					<li class="nav-item">
-						<a class="nav-link" href="#">My Work</a>
-					</li>
-
-
-					<li class="nav-item">
-						<a class="nav-link" href="#">Contact</a>
+						<a class="nav-link" href="#what">My Work</a>
 					</li>
 				</ul>
 			</div>
@@ -53,7 +48,7 @@
 
 
 				<h2 class="masthead-subheading mb-0 page-phrase">Web Development Portfolio</h2>
-				<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#about-me">Learn More</a>
+				<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#when">Learn More</a>
 			</div>
 		</div>
 
@@ -73,7 +68,6 @@
 		<div class="bg-circle-4 bg-circle">
 		</div>
 	</header>
-	<!-- TESTING -->
 
 
 	<div class="ss-container" id="ss-container">
@@ -92,7 +86,7 @@
 
 					<div class="col-lg-6 order-lg-1">
 						<div class="p-5">
-							<h2 class="display-4" id="about-me">Who</h2>
+							<h2 class="display-4" id="who">Who</h2>
 
 
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
@@ -114,7 +108,7 @@
 
 					<div class="col-lg-6">
 						<div class="p-5">
-							<h2 class="display-4">What</h2>
+							<h2 class="display-4" id="what">What</h2>
 
 
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
@@ -136,7 +130,7 @@
 
 					<div class="col-lg-6 order-lg-1">
 						<div class="p-5">
-							<h2 class="display-4">When</h2>
+							<h2 class="display-4" id="when">When</h2>
 
 
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
@@ -254,10 +248,17 @@
 	<!-- Footer -->
 
 
-	<footer class="py-5 bg-black">
-		<div class="container">
-			<p class="m-0 text-center text-white small">Copyright &copy; Dineen Lauren 2018</p>
-		</div>
+<footer class="bg-black my-5 py-5 text-muted text-small">
+<div class="container">
+  <p class="mb-1 text-center">&copy; 2018 Dineen Lauren</p>
+  <p class="float-right">
+      <a href="#" class="back-to-top">Back to top</a>
+  </p>
+</div>
+</footer>
+    
+
+
 		<!-- /.container -->
 	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js">
