updated file names

--- a/index.main.html
+++ b/index.main.html
@@ -7,20 +7,22 @@
 	<meta content="A Web Development Portfolio" name="description">
 	<meta content="Dineen Lauren" name="author">
 
-	<title>Dineen Lauren - Development Portfolio</title><!-- Bootstrap core CSS -->
-	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"><!-- Custom fonts for this template -->
+	<title>Dineen Lauren - Development Portfolio</title>
+	<!-- Bootstrap core CSS -->
+	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<!-- Custom fonts for this template -->
 	<link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet"><!-- Custom styles for this template -->
-	<link href="css/one-page-wonder.min.css" rel="stylesheet"><!-- Custom styles for this page -->
+	<link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+	<!-- Custom styles for this template -->
+	<link href="css/one-page-wonder.min.css" rel="stylesheet">
+	<!-- Custom styles for this page -->
 	<link href="favicon.png" rel="icon" type="image/png">
-	<link href="css/main.jQuery.css" rel="stylesheet">
+	<link href="css/main.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,500|Rock+Salt" rel="stylesheet">
 </head>
 
 <body>
-	<!-- Navigation -->
-
-
+	<!-- NAVBAR -->
 	<nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
 		<div class="container">
 			<a class="navbar-brand" href="#"><img alt="logo" height="50" src="img/logo.png" width="50"></a> <button aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarResponsive" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
@@ -40,41 +42,29 @@
 		</div>
 	</nav>
 
-
+	<!-- JUMBOTRON -->
 	<header class="masthead text-center text-white">
 		<div class="masthead-content">
 			<div class="container">
 				<h1 class="masthead-heading mb-0 page-heading">Dineen Lauren</h1>
-
 
 				<h2 class="masthead-subheading mb-0 page-phrase">Web Development Portfolio</h2>
 				<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#when">Learn More</a>
 			</div>
 		</div>
 
-
-		<div class="bg-circle-1 bg-circle">
-		</div>
-
-
-		<div class="bg-circle-2 bg-circle">
-		</div>
-
-
-		<div class="bg-circle-3 bg-circle">
-		</div>
-
-
-		<div class="bg-circle-4 bg-circle">
-		</div>
+		<div class="bg-circle-1 bg-circle"></div>
+		<div class="bg-circle-2 bg-circle"></div>
+		<div class="bg-circle-3 bg-circle"></div>
+		<div class="bg-circle-4 bg-circle"></div>
 	</header>
 
-
-	<div class="ss-container" id="ss-container">
-	</div>
-
-
-	<div class="main">
+	<!-- TESTING THIS CONTAINER, NEEDS WORK -->
+	<div class="ss-container" id="ss-container"></div>
+	
+	
+	<div class="main"><!-- MAIN CONTENT -->
+	<!-- JQUERY ANIMATED SECTIONS -->	
 		<section>
 			<div class="container">
 				<div class="row align-items-center">
@@ -83,19 +73,15 @@
 						</div>
 					</div>
 
-
 					<div class="col-lg-6 order-lg-1">
 						<div class="p-5">
 							<h2 class="display-4" id="who">Who</h2>
-
-
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-
 
 		<section>
 			<div class="container">
@@ -105,19 +91,15 @@
 						</div>
 					</div>
 
-
 					<div class="col-lg-6">
 						<div class="p-5">
 							<h2 class="display-4" id="what">What</h2>
-
-
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-
 
 		<section>
 			<div class="container">
@@ -127,12 +109,9 @@
 						</div>
 					</div>
 
-
 					<div class="col-lg-6 order-lg-1">
 						<div class="p-5">
 							<h2 class="display-4" id="when">When</h2>
-
-
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
 						</div>
 					</div>
@@ -140,17 +119,53 @@
 			</div>
 		</section>
 
+		
+		<!-- JAVASCRIPT ANIMATED SECTIONS -->
+		<section>
+			<div class="container">
+				<div class="row align-items-center">
+				<div class="col-lg-6 order-lg-2">
+					<div class="p-5">
+					<img class="img-fluid rounded-circle" id="firstPhoto" src="http://placekitten.com/g/300/300" alt="">
+					</div>
+				</div>
+				<div class="col-lg-6 order-lg-1">
+					<div class="p-5">
+					<h2 class="display-4" id="about-me">Who</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+					</div>
+				</div>
+				</div>
+			</div>
+		</section>
 
 		<section>
 			<div class="container">
+				<div class="row align-items-center">
+				<div class="col-lg-6">
+					<div class="p-5">
+					<img class="img-fluid rounded-circle" id="secondPhoto" src="http://placekitten.com/g/600/600" alt="">
+					</div>
+				</div>
+				<div class="col-lg-6">
+					<div class="p-5">
+					<h2 class="display-4">What</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+					</div>
+				</div>
+				</div>
+			</div>
+		</section>
+
+
+		<!-- GRID FLIP ANIMATIONS -->
+		<section>
+			<div class="container">
 				<h1 class="my-4 text-center text-lg-left">Flip Animation with CSS</h1>
-				<!-- 1st Row -->
-
-
+				<!-- CSS ROW 1 -->
 				<div class="row text-center">
-					<!-- FIRST BOX -->
 
-
+					<!-- Box 1 -->
 					<div class="col-lg-4 col-md-4 col-xs-6 p-1">
 						<div class="flip-container m-0">
 							<div class="flipper">
@@ -165,9 +180,8 @@
 							</div>
 						</div>
 					</div>
-					<!-- SECOND BOX -->
 
-
+					<!-- Box 2 -->
 					<div class="col-lg-4 col-md-4 col-xs-6 p-1">
 						<div class="flip-container m-0">
 							<div class="flipper">
@@ -182,9 +196,8 @@
 							</div>
 						</div>
 					</div>
-					<!-- THIRD BOX -->
 
-
+					<!-- Box 3 -->
 					<div class="col-lg-4 col-md-4 col-xs-6 p-1">
 						<div class="flip-container m-0">
 							<div class="flipper">
@@ -200,45 +213,34 @@
 						</div>
 					</div>
 				</div>
-				<!--ROW END-->
+				<!-- CSS ROW 1 ENDS -->
 
 
 				<h1 class="my-4 text-center text-lg-left">Flip Animation with jQuery</h1>
-				<!-- 2nd Row -->
-
-
+				<!-- jQuery ROW 1 -->
 				<div class="row text-center mb-4">
-					<!-- FIRST BOX -->
-
-
+					<!-- Box 1 -->
 					<div class="col-lg-4 col-md-4 col-xs-6 p-1">
 						<div class="flip">
 							<div class="front p-1"><img alt="" class=".card-img img-fluid img-thumbnail p-0" src="https://www.fillmurray.com/g/400/300">
 							</div>
-
-
 							<div class="back p-5">
 								<h3 class="p-5">This flip made possible by jQuery!</h3>
 							</div>
 						</div>
 					</div>
-					<!-- SECOND BOX -->
 
-
+					<!-- Box 2 -->
 					<div class="col-lg-4 col-md-4 col-xs-6 p-1">
 						<div class="flip">
 							<div class="front p-1"><img alt="" class=".card-img img-fluid img-thumbnail p-0" src="https://www.fillmurray.com/g/405/300">
 							</div>
-
-
 							<div class="back p-5">
 								<h3 class="p-5">This flip made possible by jQuery!</h3>
 							</div>
 						</div>
 					</div>
-					<!-- THIRD BOX -->
-
-
+					<!-- Box 3 -->
 					<div class="col-lg-4 col-md-4 col-xs-6 p-1">
 						<div class="flip">
 							<div class="front p-1"><img alt="" class=".card-img img-fluid img-thumbnail p-0" src="https://www.fillmurray.com/g/404/300">
@@ -251,35 +253,28 @@
 						</div>
 					</div>
 				</div>
-				<!-- ROW END-->
+				<!-- jQuery ROW 1 ENDS -->
 			</div>
-			<!-- End Container -->
-		</section>
-	</div>
-	<!-- /.container -->
+			<!-- GRID Container End -->
+		</section> <!-- GRID Section End -->
+	</div><!-- MAIN END -->
+	
 	<!-- Footer -->
-
-
 	<footer class="bg-black my-5 py-5 text-muted text-small">
 		<div class="container">
 			<p class="mb-1 text-center">&copy; 2018 Dineen Lauren</p>
-
-
 			<p class="float-right"><a class="back-to-top" href="#">Back to top</a>
 			</p>
 		</div>
 	</footer>
-	
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js">
-	</script> 
-	<script src="vendor/jquery/jquery.min.js">
-	</script> 
-	<script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js">
-	</script> 
-	<script src="main.jQuery.js">
-	</script> <!-- Bootstrap core JavaScript -->
-	 
-	<script src="vendor/bootstrap/js/bootstrap.bundle.min.js">
-	</script>
+
+	<!-- jQuery Libraries -->
+	<script src="vendor/jquery/jquery.min.js"></script> 
+	<script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
+	<!-- JavaScript for Page -->
+	<script src="javascript.main.js"></script>
+	<script src="jquery.main.js"></script>
+		<!-- Bootstrap core JavaScript -->
+	<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
