--- a/index.main.html
+++ b/index.main.html
@@ -30,12 +30,12 @@
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="#who">About Me</a>
+						<a class="nav-link" href="#what">About Me</a>
 					</li>
 
 
 					<li class="nav-item">
-						<a class="nav-link" href="#what">My Work</a>
+						<a class="nav-link" href="#when">My Work</a>
 					</li>
 				</ul>
 			</div>
@@ -49,7 +49,7 @@
 				<h1 class="masthead-heading mb-0 page-heading">Dineen Lauren</h1>
 
 				<h2 class="masthead-subheading mb-0 page-phrase">Web Development Portfolio</h2>
-				<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#when">Learn More</a>
+				<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#what">Learn More</a>
 			</div>
 		</div>
 
@@ -69,13 +69,13 @@
 			<div class="container">
 				<div class="row align-items-center">
 					<div class="col-lg-6 order-lg-2">
-						<div class="p-5"><img alt="" class="img-fluid rounded-circle elementAnimate bounceUp" src="http://placekitten.com/g/300/300">
+						<div class="p-5"><img alt="" class="img-fluid rounded-circle elementPartial bounceUp" src="http://placekitten.com/g/300/300">
 						</div>
 					</div>
 
-					<div class="col-lg-6 order-lg-1">
-						<div class="p-5">
-							<h2 class="display-4" id="who">Who</h2>
+					<div class="col-lg-6 order-lg-1" id="Who">
+						<div class="p-5 elementFull slideLeft">
+							<h2 class="display-4">Who</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
 						</div>
 					</div>
@@ -85,15 +85,16 @@
 
 		<section>
 			<div class="container">
-				<div class="row align-items-center">
+				<div class="row align-items-center">		
 					<div class="col-lg-6">
-						<div class="p-5"><img alt="" class="img-fluid rounded-circle elementAnimate bounceUp" src="http://placekitten.com/g/600/600">
+						<div class="p-5">
+							<img alt="" class="img-fluid rounded-circle elementFull slideLeft" src="http://placekitten.com/g/307/300">
 						</div>
 					</div>
 
-					<div class="col-lg-6">
-						<div class="p-5">
-							<h2 class="display-4" id="what">What</h2>
+					<div class="col-lg-6" id="what">
+						<div class="p-5 elementFull bounceUp">
+							<h2 class="display-4">What</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
 						</div>
 					</div>
@@ -101,25 +102,6 @@
 			</div>
 		</section>
 
-		<section>
-			<div class="container">
-				<div class="row align-items-center">
-					<div class="col-lg-6 order-lg-2">
-						<div class="p-5"><img alt="" class="img-fluid rounded-circle elementAnimate bounceUp" src="http://placekitten.com/g/400/400">
-						</div>
-					</div>
-
-					<div class="col-lg-6 order-lg-1">
-						<div class="p-5">
-							<h2 class="display-4" id="when">When</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		
 		<!-- JAVASCRIPT ANIMATED SECTIONS -->
 		<section>
 			<div class="container">
@@ -131,31 +113,35 @@
 				</div>
 				<div class="col-lg-6 order-lg-1">
 					<div class="p-5">
-					<h2 class="display-4" id="about-me">Who</h2>
+					<h2 class="display-4" id="when">When</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
 					</div>
 				</div>
 				</div>
 			</div>
 		</section>
-
+		
 		<section>
 			<div class="container">
 				<div class="row align-items-center">
 				<div class="col-lg-6">
 					<div class="p-5">
-					<img class="img-fluid rounded-circle" id="secondPhoto" src="http://placekitten.com/g/600/600" alt="">
+					<img class="img-fluid rounded-circle" id="secondPhoto" src="http://placekitten.com/g/302/300" alt="">
 					</div>
 				</div>
 				<div class="col-lg-6">
 					<div class="p-5">
-					<h2 class="display-4">What</h2>
+					<h2 class="display-4">Where</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
 					</div>
 				</div>
 				</div>
 			</div>
 		</section>
+		
+
+
+
 
 
 		<!-- GRID FLIP ANIMATIONS -->
