--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<!-- NAVBAR -->
 	<nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
 		<div class="container">
-			<a class="navbar-brand" href="#"><img alt="logo" height="50" src="img/dl_icon.png" width="50"></a> <button aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarResponsive" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
+			<a class="navbar-brand" href="#"><img alt="logo" height="50" src="img/logos/dl_icon.png" width="50"></a> <button aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarResponsive" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
 
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
@@ -70,7 +70,7 @@
 				<div class="row align-items-center m-5">
 
 					<div class="col-lg-6 order-lg-2">
-						<div class="p-5"><img alt="" height="300" class="img-fluid elementPartial bounceUp" src="img/bh2.png"></div>
+						<div class="p-5"><img alt="" height="300" class="img-fluid elementPartial bounceUp" src="img/logos/bh2.png"></div>
 					</div>
 
 					<div class="col-lg-6 order-lg-1" id="Who">
@@ -89,19 +89,20 @@
 				<div class="row align-items-center row-column p-5">
 
 					<div class="col-6">
-						<row>
+	
 							<div class="col-3 elementFull slideLeft icon-ui">
-								<img alt="" class="rounded-circle" src="img/ui.png">
+								<p class="p-2 m-2">UI</p>
 							</div>
 							<div class="col-3 elementFull slideLeft icon-ux">
-								<img alt="" class="rounded-circle" src="img/ux.png">
+								<p class="p-2 m-2">ux</p>
 							</div>
 							<div class="col-3 elementFull slideLeft icon-js">
-								<img alt="" class=" rounded-circle" src="img/js.png">
+								<p class="p-2 m-2">JS</p>
 							</div>
 							<div class="col-3 elementFull slideLeft icon-vue">
-									<img alt="" class=" rounded-circle" src="img/vue.png">
-							</div>
+								<p class="txt-vue">vue</p>
+								<p class="txt-vue">.js</p>
+							</div>							
 					</div>															
 															
 					<div class="col-6" id="what">
