added new branch

--- a/index.html
+++ b/index.html
@@ -189,16 +189,19 @@
 					<!-- Box 1 -->
 					<div class="col-lg-4 col-md-4 col-xs-6 p-1">
 						<div class="flip-container m-0">
-							<div class="flipper"><a href="https://www.dineenlauren.com/one-page-scroll/" target="_blank">
-								<div class="front p-1">
-									<img alt="" class="card-img img-fluid img-thumbnail p-0" src="img/img_placeholder_sq.png">
-							</div>
+							<div><a href="https://www.dineenlauren.com/one-page-scroll/" target="_blank">
+								<div class="front">
+									<img alt="" class="card-img img-fluid img-thumbnail p-0" src="img/img_api.jpg">
+									<div class="middle">
+										<button type="button" class="btn btn-dark">More Info</button>
+									</div>
+								</div>
 
-
-								<div class="back2 p-5">
+								<div class="back2">
 									<h3 class="p-5">Product Page</h3>
 									<p> One Page Scroll </p>
 								</div>
+
 							</div></a>
 						</div>
 					</div>
@@ -207,7 +210,7 @@
 					<div class="col-lg-4 col-md-4 col-xs-6 p-1">
 						<div class="flip-container m-0">
 							<div class="flipper">
-								<div class="front p-1">
+								<div class="front">
 									<a href="#"><img alt="" class="card-img img-fluid img-thumbnail p-0" src="img/img_placeholder_sq.png"></a>
 								</div>
 
@@ -223,7 +226,7 @@
 					<div class="col-lg-4 col-md-4 col-xs-6 p-1">
 						<div class="flip-container m-0">
 							<div class="flipper">
-								<div class="front p-0">
+								<div class="front">
 									<a href="#"><img alt="" class="card-img img-fluid img-thumbnail p-0" src="img/img_placeholder_sq.png"></a>
 								</div>
 
@@ -284,7 +287,7 @@
 	<!-- Footer -->
 	<footer class="bg-black my-5 py-5 text-muted text-small">
 		<div class="container">
-			<p class="mb-1 text-center">&copy; 2018 Dineen Lauren</p>
+			<p class="mb-1 text-center">&copy; 2019 Dineen Lauren</p>
 			<p class="float-right"><a class="back-to-top" href="#">Back to top</a>
 			</p>
 		</div>
