updated contact info

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<div class="side-icons">
 					<a href="#" target="_blank"><i class="fab fa-linkedin fa-4x d-block p-2 m-4" style="color: #ffffff;"></i></a>
 					<a href="https://github.com/dineensch" target="_blank"><i class="fab fa-github fa-4x d-block p-2 m-4" style="color: #ffffff;"></i></a>
-					<a href="mailto:dineen.lauren@outlook.com" target="_blank"><i class="far fa-envelope fa-4x d-block p-2 m-4" style="color: #ffffff;"></i></a>
+					<a href="mailto:dineen@dineenlauren.com" target="_blank"><i class="far fa-envelope fa-4x d-block p-2 m-4" style="color: #ffffff;"></i></a>
 				</div>	
 			</div>
 		</section>
