--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
 									<div class="back2 p-5">
 										<h3 class="pt-5">Capstone</h3>
 										<p> TBD </p>
-										<a class="btn btn-outline-light" href="#" target="_blank" role="button">View Project</a>
-										<a class="btn btn-outline-light" href="#" target="_blank" role="button">Source Code</a>
+										<a class="btn btn-outline-light" href="https://www.dineenlauren.com/capstone-project/#/" target="_blank" role="button">View Project</a>
+										<a class="btn btn-outline-light" href="https://www.dineenlauren.com/capstone-project/#/" target="_blank" role="button">Source Code</a>
 									</div>
 								</div>
 							</div>
