added i-do-with-vue project

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
 
 <body>
+<div class="container-fluid page-container px-0 mx-0">
+
 	<!-- NAVBAR -->
 	<nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
 		<div class="container">
@@ -208,13 +210,13 @@
 							<div class="flip-container">
 								<div class="flipper">
 									<div class="front p-1">
-										<img alt="" class="card-img img-fluid img-thumbnail p-0" src="img/img_placeholder_sq.png">
+										<img alt="" class="card-img img-fluid img-thumbnail p-0" src="img/vue.png">
 								</div>
 									<div class="back2 p-5">
-										<h3 class="pt-5">Capstone</h3>
-										<p> TBD </p>
-										<a class="btn btn-outline-light" href="https://www.dineenlauren.com/capstone-project/#/" target="_blank" role="button">View Project</a>
-										<a class="btn btn-outline-light" href="https://www.dineenlauren.com/capstone-project/#/" target="_blank" role="button">Source Code</a>
+										<h3 class="pt-5">I Do With Vue</h3>
+										<p> A Vue.js project </p>
+										<a class="btn btn-outline-light" href="https://www.dineenlauren.com/i-do-with-vue/#/" target="_blank" role="button">View Project</a>
+										<a class="btn btn-outline-light" href="https://github.com/dineensch/dineensch.github.io" target="_blank" role="button">Source Code</a>
 									</div>
 								</div>
 							</div>
@@ -326,5 +328,6 @@
 	<script src="jquery.main.js"></script>
 		<!-- Bootstrap core JavaScript -->
 	<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+	</div>
 </body>
 </html>
